# dbmaster

./: README.md  mainDB.py  masterDBMatchClass.py  parseDBArtistsData.py  pyproject.toml  setup.py
notebooks/: Download Missing Artists 2.ipynb  Metadata.ipynb  dbMatch.ipynb
notebooks/.ipynb_checkpoints/: Download Missing Artists 2-checkpoint.ipynb  Metadata-checkpoint.ipynb
notebooks/old/: Download Missing Artists 3.ipynb  Metadata.ipynb  Untitled.ipynb
src/dbmaster/: __init__.py  basic.py  dbs.py  match.py  metas.py  params.py  paths.py  persist.py
tests/: test_basic.py  test_dbs.py  test_import.py  test_match.py  test_metas.py  test_params.py  test_paths.py  test_persist.py
