[tool.poetry]
name = "dbmaster"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "dbmaster", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
